1999-02-21  Tatsuya Ichikawa  <t-ichi@po.shiojiri.ne.jp>

	* lisp/gnus.el (gnus-version-number): Update to 6.10.059.
	(gnus-revision-number): Fresh start from 00.

	* Sync up with Pterodactyl Gnus v0.77.

1999-02-18  Tsukamoto Tetsuo  <czkmt@remus.dti.ne.jp>

	* lisp/gnus.el (gnus-revision-number): Increment to 09.

	* lisp/gnus-start.el (save-buffers-kill-emacs): Rewrite the
	advice. Call `gnus-offer-save-summaries'.

1999-02-18  Tsukamoto Tetsuo  <czkmt@remus.dti.ne.jp>

	* lisp/gnus.el (gnus-revision-number): Increment to 08.

	* lisp/gnus-start.el (save-buffers-kill-emacs): Advice. Call
	`gnus-save-newsrc-file' before `save-some-buffers' is called.

	* README-offline.en: Update.

	* README-offline.ja: Fix typo.

	* lisp/gnus-ofsetup.el (gnus-setup-for-offline): Set
	`gnus-offline-hangup-program' and `gnus-offline-dialup-program' to
	nil when null string is given.

1999-02-18  Tatsuya Ichikawa  <t-ichi@po.shiojiri.ne.jp>

	* texi/Makefile.in: Change to work on Windows environment and
	other platforms.

	* lisp/gnus.el (gnus-revision-number): Increment to 07.

1999-02-17  Katsumi Yamaoka   <yamaoka@jpl.org>

	* lisp/dgnushack.el (dgnushack-make-package): Fix typo.

1999-02-17  Katsumi Yamaoka   <yamaoka@jpl.org>

	* lisp/gnus.el (gnus-revision-number): Increment to 06.

	* Makefile.in (install-package-ja, package-ja, install-package,
	package): New targets.
	(PACKAGEDIR): New user option.

	* lisp/Makefile.in (install-package, package): New targets.
	(PACKAGEDIR): New user option.

	* lisp/dgnushack.el (dgnushack-install-package): New function.
	(dgnushack-make-package): New function.
	(dgnushack-info-file-regexp): New constant.
	(dgnushack-compile): Remove "_pkg.el" from the list.

	* configure: Regenerate by autoconf-2.13.

1999-02-17  Yoshiki Hayashi   <g740685@komaba.ecc.u-tokyo.ac.jp>

	* aclocal.m4: install .el files to site-lisp/gnus instead of
	site-lisp.
	* Makefile.in: add new rule `all-ja'.

1999-02-15  Tatsuya Ichikawa  <t-ichi@po.shiojiri.ne.jp>
