@@ -353,16 +353,17 @@ If ARGS, PROMPT is used as an argument to `format'."
       (if result
 	  (progn
 	    (mail-source-callback callback server)
-	    (when prescript
-	      (if (fboundp prescript)
-		  (funcall prescript)
-		(call-process shell-file-name nil nil nil
-			      shell-command-switch 
-			      (format-spec
-			       postscript
-			       (format-spec-make
-				?p password ?t mail-source-crash-box
-				?s server ?P port ?u user))))))
+;; 	    (when postscript
+;; 		(if (fboundp postscript)
+;; 		    (funcall postscript)
+;; 		  (call-process shell-file-name nil nil nil
+;; 				shell-command-switch 
+;; 				(format-spec
+;; 				 postscript
+;; 				 (format-spec-make
+;; 				  ?p password ?t mail-source-crash-box
+;; 				  ?s server ?P port ?u user))))))
+	    )
 	;; We nix out the password in case the error
 	;; was because of a wrong password being given.
 	(setq mail-source-password-cache
